refactor: use domain service in legacy code